2009-05-15  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-{ict,proper,common,science,geo}.txt: Add words.

2009-05-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/Makefile.am, data/tdict-*.txt: Convert wordlists from TIS-620
	to UTF-8, for easy management with modern tools.

2009-05-13  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-std-compound.txt: Remove some loose compounds.
	* data/tdict-{ict,spell,district,proper,common,science,geo}.txt:
	Add words.

2009-05-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-{ict,district,proper,common,science,geo}.txt: Add words.
	* data/tdict-proper.txt: Sort some words properly.

2009-04-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-{ict,proper,common,science,geo}.txt: Add words.

2009-04-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Post-release version prefix added.

	* data/tdict-{ict,district,proper,common,geo}.txt: Add words.
	* data/tdict-{common,collection}.txt: Move some collection of words
	to appropriate category.

2009-04-06  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Bump library revision.

	* configure.in, NEWS:
	=== Version 0.1.11 ===

2009-04-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* data/tdict-{ict,district,proper,common,science,geo}.txt: Add words.

2009-03-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Post-release version suffix added.

	* libthai.pc.in: Require datrie-0.2 privately, to avoid exposing it
	  unnecessarily to applications. This had even caused upgrading problem
	  when libdatrie with different soname versions are loaded
	  simultaneously, one from the application, and the other from libthai.
	  And with libdatrie poor symbols handling, this had caused name clash.
	  Thanks Loic Minier for pointing out the cause.

2009-03-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>
